calico-policies/private-network-isolation/calico-v3/au-syd/allow-private-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone
# of your cluster to the cluster master through the private service endpoint.
# Note that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Nets for AP South: mel01, syd01, syd04, syd05
      - 166.9.52.14/32
      - 166.9.52.15/32
      - 166.9.52.23/32
      - 166.9.52.30/32
      - 166.9.52.31/32
      - 166.9.54.10/32
      - 166.9.54.11/32
      - 166.9.54.12/32
      - 166.9.54.13/32
      - 166.9.54.21/32
      - 166.9.54.3/32
      - 166.9.54.32/32
      - 166.9.54.33/32
      - 166.9.56.16/32
      - 166.9.56.24/32
      - 166.9.56.36/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Nets for AP South: mel01, syd01, syd04, syd05
      - 166.9.52.14/32
      - 166.9.52.15/32
      - 166.9.52.23/32
      - 166.9.52.30/32
      - 166.9.52.31/32
      - 166.9.54.10/32
      - 166.9.54.11/32
      - 166.9.54.12/32
      - 166.9.54.13/32
      - 166.9.54.21/32
      - 166.9.54.3/32
      - 166.9.54.32/32
      - 166.9.54.33/32
      - 166.9.56.16/32
      - 166.9.56.24/32
      - 166.9.56.36/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
