calico-policies/private-network-isolation/calico-v3/au-syd/allow-private-services-pods.yaml
# This policy allows outgoing network traffic from pods to other
# IBM Cloud services that support private service endpoints.
# The example nets in this policy are for IBM Cloud Container Registry
# and IBM Cloud Monitoring with Sysdig.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-services-pods
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global registry
      - 166.9.20.31/32
      - 166.9.22.22/32
      - 166.9.24.16/32
      # IBM Cloud Container Registry: AP South nets for your own registry
      - 166.9.52.20/32
      - 166.9.54.19/32
      - 166.9.56.13/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring with Sysdig: AU Syd nets
      - 166.9.52.10/32
      - 166.9.54.2/32
      - 166.9.56.24/32
      ports:
      - 443
      - 6443
    protocol: TCP
    source: {}
  order: 1900
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
