calico-policies/private-network-isolation/calico-v3/au-syd/allow-sys-mgmt-private.yaml
# This policy allows connections for specific IBM Cloud infrastructure
# (SoftLayer) systems that are used to manage the worker nodes.
# Note that you must include the nets for dal01, dal10, and wdc04.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-sys-mgmt-private
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Required nets for all clusters: dal01, dal10, wdc04
      - 10.0.64.0/19
      - 10.200.80.0/20
      - 10.3.160.0/20
      - 10.201.0.0/20
      # Nets for AP South zones
      - 10.3.96.0/20 # syd01
      - 10.201.16.0/20 # syd04
      - 10.202.16.0/20 # syd05
    source: {}
  ingress:
  - action: Allow
    destination: {}
    source:
      nets:
      # Required nets for all clusters: dal01, dal10, wdc04
      - 10.0.64.0/19
      - 10.200.80.0/20
      - 10.3.160.0/20
      - 10.201.0.0/20
      # Nets for AP South zones
      - 10.3.96.0/20 # syd01
      - 10.201.16.0/20 # syd04
      - 10.202.16.0/20 # syd05
  order: 1800
  selector: ibm.role == 'worker_private'
  types:
  - Egress
  - Ingress
